# ChemistryWizard

./: .clang-format  CMakeLists.txt
ChemistryWizard/: Actions.cpp  Actions.h  CMakeLists.txt  ChemistryWizard.cpp  ChemistryWizard.h  ChemistryWizard.ui  ChemistryWizardUI.cpp  ChemistryWizardUI.h
